--- a/01.Rmd
+++ b/01.Rmd
@@ -25,9 +25,9 @@ The first suggestion includes a few techniques for constructing an optimized onl
 
 After constructing a robust model for skills and experiences, we should try to fill in skill or experience gaps. First, we can infer missing skills by utilizing association rules within the individual profile. For example, if someone is experienced in Jquery and Angular, there's a 99% chance they also know Javascript well. Second, we can further deduce missing skills and experiences by comparing similar positions at the same company division. If many Microsoft developers knows .NET, we can infer that developer X who works at Microsoft will also. Third, we can crawl related resources from that candidate, whether it's their github repository, academic papers, online accolades, etc. to fill in more gaps. 
 
-For the second suggestion, we want to query against an optimized model to match against a job opening, which would help the recruiter and the job seeker. This process can be done in the background instead of initated by a recruiter via boolean searches. On the hiring side, a job description is posted on LinkedIn with relevant criteria set, location, position, required skills and preferred skills utilizing the same underlying skills and experience taxonomy from earlier. This would start a query that matches the most relevant candidates, which would continuously run to push up the most relevant results. From the candidates perspective, this same matching algorithm would also surface the most relevant jobs.
+For the second suggestion, we want to query against an optimized model to match against a job opening, which would help the recruiter and the job seeker. This process can be done in the background instead of initiated by a recruiter via boolean searches. On the hiring side, a job description is posted on LinkedIn with relevant criteria set, location, position, required skills and preferred skills utilizing the same underlying skills and experience taxonomy from earlier. This would start a query that matches the most relevant candidates, which would continuously run to push up the most relevant results. From the candidates perspective, this same matching algorithm would also surface the most relevant jobs.
 
-Using this updated job matching model, we can drastically cut down the noise of mediocre or bad match candidates, and refocus the job seeker on only the best options. The close to instaneous feedback from the moment a job is posted or when a job seeker is available also will reduce time and resources currently spent on time-to-hire and time-to-reemployment.
+Using this updated job matching model, we can drastically cut down the noise of mediocre or bad match candidates, and refocus the job seeker on only the best options. The close to instantaneous feedback from the moment a job is posted or when a job seeker is available also will reduce time and resources currently spent on time-to-hire and time-to-reemployment.
 
 ## The Future and Potential Pitfalls 
 
