--- a/index.Rmd
+++ b/index.Rmd
@@ -9,6 +9,7 @@ documentclass: book
 <!-- This won't be displayed but it will initialize your R session. Add any R libraries you need here. -->
 ```{r init,include=FALSE,echo=FALSE}
 library(magrittr)
+readLines('https://www.zotero.org/api/users/4684249/items/top?limit=25&format=bibtex&key=slAzDDCc7LkCcpCEYM7XDkM3&v=1') %>% writeLines('references.bib')
 ```
 
 
