--- a/01.Rmd
+++ b/01.Rmd
@@ -6,7 +6,7 @@ LinkedIn profile, machine learning, optimze online presence
 
 ## Jobseeker's Wasted Potential
 
-An average person in the United States has 5.6 spells of unemployment<sup>[1](#footnote1)</sup> and each bout is roughly 3 months<sup>[1](#footnote1)</sup>. That's a total of a year and four months of unemployment in a lifetime of dealing with likely financial instability and the stresses that causes. The majority of that time spent is the time-consuming beginning to end re-employment process including job search, job application, interviews and hopefully an offer weeks or months later. 
+An average person in the United States has 5.6 spells of unemployment [@labor_statistics_nls]_nodate and each bout is roughly 3 months [@labor_statistics_nls]. That's a total of a year and four months of unemployment in a lifetime of dealing with likely financial instability and the stresses that causes. The majority of that time spent is the time-consuming beginning to end re-employment process including job search, job application, interviews and hopefully an offer weeks or months later. 
 
 This time and effort spent on the job hunt drains not only the resources of the individual job seeker, but also impacts the opportunity cost of potential labor on the larger economy. Breaking down the components of job search, we can see this is a equal-parts process problem and data flow or data match problem.  The process aspect of job search has been steadily improving in the past decades, transitioning from print based job ads and resumes to online applications. However, the data match aspect of job search, has arguably, gotten worse. While previously, a recruiter can scan 30 or 50 paper resumes to find a suitable match, now we have applications in the hundreds or thousands for some job openings. Candidates take advantage of the ease through which they can one-click apply, and recruiters began to rely on software to help them sift through applications.
 
@@ -14,7 +14,7 @@ This data flow and match problem is what we would like to focus on to solve.
 
 ## A Smarter Approach to Unemployment
 
-Over 90% of recruiters use LinkedIn to source or vet candidates<sup>[1](#footnote2)</sup>. LinkedIn stores massive amounts of semantically rich online professional profiles and a recruiter can quickly find a list of individuals in a given area. In addition, they can keep tabs on active and updated profiles of candidates with relevant experience for any potential job openings. LinkedIn also has a toggle for job seekers to let recruiters know if you are open to a new job. With this platform, we have an ideal information data bank to source and match candidates.
+Over 90% of recruiters use LinkedIn to source or vet candidates[@fottrell_how_nodate]. LinkedIn stores massive amounts of semantically rich online professional profiles and a recruiter can quickly find a list of individuals in a given area. In addition, they can keep tabs on active and updated profiles of candidates with relevant experience for any potential job openings. LinkedIn also has a toggle for job seekers to let recruiters know if you are open to a new job. With this platform, we have an ideal information data bank to source and match candidates.
 
 However, the matching algorithm in LinkedIn for any open position is far from perfect. Interviews with recruiters reveal that they use complicated boolean queries to find candidates with the right skill set. Another impactful issue is that experiences and skills from ideal candidates are often not explicitly listed or not represented by what recruiters will search they by. To mitigate these matching issues, we suggest the following:
 
