#4 - adding an short explainer for ATS

--- a/01.Rmd
+++ b/01.Rmd
@@ -8,7 +8,7 @@ LinkedIn profile, machine learning, optimze online presence
 
 An average person in the United States has 5.6 spells of unemployment [@labor_statistics_nls] and each bout is roughly 3 months [@labor_statistics_nls]. That's a total of a year and four months of unemployment in a lifetime of dealing with likely financial instability and the stresses that causes. The majority of that time spent is the time-consuming beginning to end re-employment process including job search, job application, interviews and hopefully an offer weeks or months later. 
 
-This time and effort spent on the job hunt drains not only the resources of the individual job seeker, but also impacts the opportunity cost of potential labor on the larger economy. Breaking down the components of job search, we can see this is a equal-parts process problem and data flow or data match problem.  The process aspect of job search has been steadily improving in the past decades, transitioning from print based job ads and resumes to online applications. However, the data match aspect of job search, has arguably, gotten worse. While previously, a recruiter can scan 30 or 50 paper resumes to find a suitable match, now we have applications in the hundreds or thousands for some job openings. Candidates take advantage of the ease through which they can one-click apply, and recruiters began to rely on software to help them sift through applications.
+This time and effort spent on the job hunt drains not only the resources of the individual job seeker, but also impacts the opportunity cost of potential labor on the larger economy. Breaking down the components of job search, we can see this is a equal-parts process problem and data flow or data match problem.  The process aspect of job search has been steadily improving in the past decades, transitioning from print based job ads and resumes to online applications. However, the data match aspect of job search, has arguably, gotten worse. While previously, a recruiter can scan 30 or 50 paper resumes to find a suitable match, now we have applications in the hundreds or thousands for some job openings. Candidates take advantage of the ease through which they can one-click apply, and recruiters began to rely on software to help them sift through applications. Many of these systems, known broadly as Applicant Tracking Systems, are fallible and don't always bubble up the best candidates.
 
 By using data science and machine learning to improve the data match problem in the job hunt for individuals, we can reduce the cost of unemployment for both the individual and overall economy.
 
