--- a/02.Rmd
+++ b/02.Rmd
@@ -1,25 +1,53 @@
-# My second cool idea {#slug-two}
+# Kelpie - Crowd Sourced Smart Hydroponics {#slug-two}
 
 #### Keywords {-}
 
-yaba, daba, do
+hydroponics, machine learning, recommendation algorithms, crowd sourced, Kelpie
+
 
 ## A beginning.
 
-Nulla  sint  art party ex, mlkshk disrupt selvage 90's.  Umami sed slow-carb, fugiat  dolore nihil glossier magna migas actually farm-to-table microdosing keytar fixie.  IPhone fashion axe pinterest, cardigan street art quinoa banh mi bitters mollit  commodo pok pok culpa  delectus ut air plant.  Offal edison bulb ex, celiac 8-bit vaporware polaroid thundercats flannel kickstarter labore.  Activated charcoal portland af tousled microdosing woke, in  thundercats consectetur gluten-free hammock duis  next level DIY.  Keffiyeh commodo velit  mollit  brunch, cronut edison bulb banh mi swag stumptown crucifix hell of.  Brunch williamsburg try-hard, seitan literally vexillologist venmo DIY pariatur nesciunt master cleanse XOXO.
+35% of all households in America are growing food at home or in a community garden [citation needed], up 63% in the past decade in younger households. [citation needed] Despite the flourishing enthusiasm for home gardens, many folks do not have access to a plot of land or care to keep gallons of soil in their apartment. Hydroponics have been gaining momentum for hobbiests, but the cost and knowledge gap so far has prevented it from commonly rooting in households. 
+
+*insert something about cost and knowledge*
+
+*lots of dimensions to capture*
 
 ## A middle.
 
-8-bit synth irony nisi wolf, street art dreamcatcher flannel placeat selvage health goth sriracha.  Glossier labore ex venmo, cillum  live-edge jianbing everyday carry af cray laborum incididunt eiusmod jean shorts.  Normcore slow-carb lyft letterpress, beard tilde art party.  Poke marfa incididunt tempor duis.  Iceland fam ex beard, activated charcoal vaporware nesciunt lyft cronut four dollar toast irony.  Officia  stumptown voluptate  unicorn culpa  bushwick.  Mollit  vero af marfa deserunt  flexitarian.
+Using data science and pooled crowd sourced data, we can optimize yields for the optimal crops to affordabily grow produce in anyone's living quarters using hydroponics. 
 
+Kelpie
+Kelpie will collect data and send it via wifi to your smartphone, take pictures. 
+collect data:
+- pH, water temperature, air temperature, humidity
+- NPK ratios, trace elements (overtime)
+- aeration CO^2
+- light cycles
+- compost tea blends
+- plant type
 
-```{r experimental,echo=F,results='asis',eval=F}
-data.table::fread('https://raw.githubusercontent.com/UCB-MIDS/experiments-causality/master/data/GerberGreenBook_Chapter3_Donations.csv?token=ABNmuX-Q14rzQ4teItDenc9L5Wo2flncks5ZL5qEwA%3D%3D') %>% stargazer::stargazer(type = 'html',title = 'Something from W241 Experiments and Causality')
-```
+Kelpie Cloud 
+- algorithms ran 
 
+Based on the availibility of your natural compost, home conditions and desired output, data science can deduce the most productive plants to grow in your house. 
 
-Laborum williamsburg sunt whatever, DIY reprehenderit  retro vaporware id  hella flannel sartorial vero fugiat  before they sold out.  Copper mug salvia keffiyeh, neutra nostrud iceland keytar kogi church-key quinoa ramps mlkshk.  Seitan mollit  3 wolf moon, forage shabby chic cillum  church-key tofu exercitation aliquip.  Church-key distillery flexitarian meh incididunt retro, ugh wolf selvage hashtag.  Bicycle rights 90's officia  vape.  Listicle post-ironic vape ex.  Gluten-free lomo tumeric, yuccie everyday carry tempor put a bird on it knausgaard nisi ugh skateboard VHS.
+example:
+aquarium waste + coffee grounds + egg shells + banana peel == fertilizer
+
 
 ## An end.
 
-Kombucha pok pok lomo, forage bicycle rights paleo kickstarter literally.  Hot chicken dolor  vegan accusamus master cleanse tousled, yuccie cliche retro aesthetic bushwick actually.  Ennui viral VHS pitchfork pop-up cornhole, nihil quinoa scenester gentrify occaecat  YOLO anim.  Umami copper mug live-edge, air plant meditation bushwick chartreuse adipisicing tousled.  Art party affogato chicharrones, photo booth enim swag vero meh seitan +1 activated charcoal nihil.  Etsy gluten-free authentic mixtape.  Shabby chic duis  90's pop-up pinterest, lumbersexual mollit  cillum.
+Smart hydroponics, Kelpie, has the ability to bridge the cost and knowledge gap for everyone to be able to grow food in their home. Using a cloud of crowd sourced data and prediction algorithms to lower the costs of required inputs, like fertilizer and water, to each grower's constraints, we can not only recommend the types of plants grown, but also optimize the yield.
+
+good things:
+- all components of hydroponics are reusable
+- plans grow fast and lush, year round
+- saves room, water can be recycled
+
+gotchas:
+- not a replacement for natural cycles (seasons) or yards or a walk in the forest
+- not a replacement for local produce or farmers market
+
+
+https://garden.org/learn/articles/view/3819/
