--- a/02.Rmd
+++ b/02.Rmd
@@ -1,4 +1,4 @@
-# Kelpie - Crowd Sourced Smart Hydroponics {#slug-two}
+# Kelpie - Crowd Sourced Smart Hydroponics {#SmartHydro-Kelpie}
 
 #### Keywords {-}
 
