--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,12 @@
 ---
 title: "W201 Portfolio"
-author: "Oski Bear"
-date: "MIDS Fall 2017"
+author: "Sophia Cui"
+date: "MIDS Spring 2018"
 site: bookdown::bookdown_site
 documentclass: book
+bibliography: ["references.bib"]
+biblio-style: "apalike"
+link-citations: true
 ---
 
 <!-- This won't be displayed but it will initialize your R session. Add any R libraries you need here. -->
