adding a few changes to references, preparing for a summer plant

--- a/references.bib
+++ b/references.bib
@@ -1,14 +1,10 @@
 
-@misc{noauthor_food_nodate,
-	title = {Food {Gardening} in the {U}.{S}. at the {Highest} {Levels} in {More} {Than} a {Decade} {According} to {New} {Report} by the {National} {Gardening} {Association} - {Garden}.org},
+@misc{noauthor_national_nodate,
+	title = {National {Gardening} {Association}},
 	url = {https://garden.org/learn/articles/view/3819/},
-	urldate = {2018-02-24}
-}
-
-@misc{noauthor_food_nodate-1,
-	title = {Food {Gardening} in the {U}.{S}. at the {Highest} {Levels} in {More} {Than} a {Decade} {According} to {New} {Report} by the {National} {Gardening} {Association} - {Garden}.org},
-	url = {https://garden.org/learn/articles/view/3819/},
-	urldate = {2018-02-24}
+	abstract = {Food Gardening in the U.S. at the Highest Levels in More Than a Decade According to New Report},
+	urldate = {2018-02-24},
+	journal = {Garden.Org}
 }
 
 @book{labor_statistics_nls_nodate,
