--- a/02.Rmd
+++ b/02.Rmd
@@ -7,7 +7,7 @@ hydroponics, machine learning, recommendation algorithms, crowd sourced, Kelpie
 
 ## Undeniable Bond with Mother Earth
 
-35% of all households in America are growing food at home or in a community garden [@noauthor_food_nodate], up 63% in the past decade in younger households. [@noauthor_food_nodate] Despite the flourishing enthusiasm for home gardens, many folks do not have access to a plot of land or care to keep gallons of soil in their apartment. Hydroponics, an alternative to backyard gardening, has been gaining momentum for hobbiests, but the cost and knowledge gap so far has prevented it from commonly rooting in households. 
+35% of all households in America are growing food at home or in a community garden [@noauthor_national_nodate], up 63% in the past decade in younger households. [@noauthor_national_nodate] Despite the flourishing enthusiasm for home gardens, many folks do not have access to a plot of land or care to keep gallons of soil in their apartment. Hydroponics, an alternative to backyard gardening, has been gaining momentum for hobbiests, but the cost and knowledge gap so far has prevented it from commonly rooting in households. 
 
 Given the right knowledge and tools, hydroponics could grow fuller any-season plants cheaper than traditional methods. Part of the reason is that it can be optimized to deliver the ideal blend of macro and micro nutrients given controlled environmental factors. However, the margin of error for hydroponic gardening is small, and the knowledge associated has many complex dimensions which are not well documented or available. 
 
