fixing a reference and merge conflicts

--- a/references.bib
+++ b/references.bib
@@ -15,7 +15,7 @@
 	abstract = {Food Gardening in the U.S. at the Highest Levels in More Than a Decade According to New Report},
 	urldate = {2018-02-24},
 	journal = {Garden.Org},
-	author = {National Gardening Association}
+	author = {National Gardening Association, NGA}
 }
 
 @book{labor_statistics_nls_nodate,
