--- a/02.Rmd
+++ b/02.Rmd
@@ -7,9 +7,9 @@ hydroponics, machine learning, recommendation algorithms, crowd sourced, Kelpie
 
 ## Undeniable Bond with Mother Earth
 
-The National Gardening Association quotes that 35% of all households in America are growing food at home or in a community garden, up 63% in the past decade in younger millennial households [@national_gardening_association_national_nodate].  Despite the flourishing enthusiasm for home gardens, many folks do not have access to a plot of land - 35% of households in the US are renters and large cities like New York City have 45% of residents living in apartments [@nmhc_quick_nodate]. 
+The NGA quotes that 35% of all households in America are growing food at home or in a community garden, up 63% in the past decade in younger millennial households [@national_gardening_association_national_nodate].  Despite the flourishing enthusiasm for home gardens, many folks do not have access to a plot of land - 35% of households in the US are renters and large cities like New York City have 45% of residents living in apartments [@nmhc_quick_nodate].
 
-Hydroponics, the method of growing plants without soil in a compact or even vertical space is an alternative to traditional backyard gardening. It has been gaining momentum for hobbyists, but the cost and knowledge gap thus far has prevented it from commonly rooting in households. However, given the right knowledge and tools, hydroponics could grow fuller any-season plants cheaper than traditional methods. Part of the reason is that it can be optimized to deliver the ideal blend of macro and micro nutrients given controlled environmental factors. However, the margin of error for hydroponic gardening is tiny, and the knowledge associated has many complex dimensions which are not well documented or available. 
+Hydroponics, the method of growing plants without soil in a compact or vertical space is an alternative to traditional backyard gardening. It has been gaining momentum for hobbyists, but the cost and knowledge gap thus far has prevented it from commonly rooting in households. However, given the right knowledge and tools, hydroponics could grow fuller any-season plants cheaper than traditional methods. Part of the reason is that it can be optimized to deliver the ideal blend of macro and micro nutrients given controlled environmental factors. However, the margin of error for hydroponic gardening is tiny, and the knowledge associated has many complex dimensions which are not well documented or available. 
 
 The solution is Kelpie - a smart gardening unit that uses massive amounts of crowd sourced hydroponic data and data science to prescribe a curated hydroponic grow process for the avid gardener. 
 
